argocd_apps/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-v1
  namespace: dev
spec:
  selector:
    app: playground-v1
  ports:
  - port: 8888
    targetPort: 8888
  type: LoadBalancer
  loadBalancerIP: 192.168.1.100
